--- a/src/main.css
+++ b/src/main.css
@@ -21,3 +21,12 @@
 .font-bakh-regular {
     font-family: bakh-regular !important;
 }
+
+.animate-fadeIn{
+    animation: fadeIn 200ms ease-in-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
